# bzip2-compressor

./: CMakeLists.txt  README.md  main.cpp
include/: bits.hpp  coder-bwt.hpp  coder-bzip2.hpp  coder-huffman.hpp  coder-mtf.hpp  coder.hpp  suffix-array.hpp  utils.hpp
src/: bits.cpp  coder-bwt.cpp  coder-huffman.cpp  coder-mtf.cpp  suffix-array.cpp  utils.cpp
